--- a/public/views/layouts/master.pug
+++ b/public/views/layouts/master.pug
@@ -2,15 +2,15 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Hópverkefni</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Hópaverkefni</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/h5bp.css">
+
+        <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.min.css">
+
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -18,11 +18,12 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Content -->
-        block content
+        <div id="main-container">
+          block content
+        </div>
 
         <script src="js/plugins.js"></script>
-
+        <script src="js/main.min.js"></script>
         block scripts
     </body>
 </html>
