--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -1,4 +1,8 @@
 extends layouts/master.pug
 
 block content
-    h1 Hello World
+  h1 Hello World
+  div.modal.login-modal
+    div.modal-background
+    div.modal-content
+    button.modal-close
