--- a/public/views/layouts/master.pug
+++ b/public/views/layouts/master.pug
@@ -19,6 +19,9 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div id="header-container">
+          include ../includes/nav.pug
+        </div>
 
         <div id="main-container">
           block content
