--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -2,4 +2,4 @@ extends layouts/master.pug
 
 block content
   h1 Hello World
-  
+  <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
