Add basic POC fyrir spurningar í /profile

--- a/public/views/includes/nav.pug
+++ b/public/views/includes/nav.pug
@@ -17,5 +17,5 @@ div.modal.login-modal
         div.content
           a.button.facebook-button(href="/auth/facebook")
             span.fa.fa-facebook
-            div.button-text Login með Facebook
+            div.left-pad Login með Facebook
   button.modal-close
