--- a/public/views/layouts/master.pug
+++ b/public/views/layouts/master.pug
@@ -15,7 +15,6 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -23,7 +22,7 @@
           include ../includes/nav.pug
         </div>
 
-        <div id="main-container">
+        <div id="main-container" class="container">
           block content
         </div>
 
