--- a/public/views/layouts/master.pug
+++ b/public/views/layouts/master.pug
@@ -32,6 +32,7 @@
           -else
             script(src="https://unpkg.com/vue@2.1.4/dist/vue.min.js")
 
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.min.js"></script>
 
