--- a/public/views/layouts/master.pug
+++ b/public/views/layouts/master.pug
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="css/main.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
-
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" defer></script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
