--- a/public/views/profile.pug
+++ b/public/views/profile.pug
@@ -47,33 +47,14 @@ block content
                     <input type="radio" name="isGraduating" value="0">Nei
                   </label>
                 </p>
-                <!-- <label class="label">Tæknir sem þú getur unnið með:</label>
-                <div class="techList">
-                  <input name="tech" type="checkbox" value="0" id="0"/>
-                  <label for="0"><span>CSS</span></label>
-                  <input name="tech" type="checkbox" value="1" id="1"/>
-                  <label for="1"><span>Javascript</span></label>
-                  <input name="tech" type="checkbox" value="2" id="2"/>
-                  <label for="2"><span>NodeJS</span></label>
-                  <input name="tech" type="checkbox" value="3" id="3"/>
-                  <label for="3"><span>Pug</span></label>
-                  <input name="tech" type="checkbox" value="4" id="4"/>
-                  <label for="4"><span>SCSS</span></label>
-                  <input name="tech" type="checkbox" value="5" id="5"/>
-                  <label for="5"><span>CoffeeScript</span></label>
-                  <input name="tech" type="checkbox" value="6" id="6"/>
-                  <label for="6"><span>Git</span></label>
-                  <input name="tech" type="checkbox" value="7" id="7"/>
-                  <label for="7"><span>Java</span></label>
-                  <input name="tech" type="checkbox" value="8" id="8"/>
-                  <label for="8"><span>C#</span></label>
-                  <input name="tech" type="checkbox" value="9" id="9"/>
-                  <label for="9"><span>Python</span></label>
-                  <input name="tech" type="checkbox" value="10" id="10"/>
-                  <label for="10"><span>Django</span></label>
-                  <input name="tech" type="checkbox" value="11" id="11"/>
-                  <label for="11"><span>Thing</span></label>
-                </div> -->
+                <label class="label">Tæknir sem þú getur unnið með:</label>
+                <p class="control">
+                  <input class="input" type="text" placeholder="Byrjaðu að skrifa" id="addTag">
+                  <button class="button is-info" id="confirmTag">Staðfesta tag</button>
+                </p>
+                <div class="techList" id="techList">
+                  
+                </div>
               </div>
               <p class="control">
                 <button class="button is-info" id="profileSubmit">Staðfesta breytingar</button>
