Framendahluti tagganna tilbúinn
Nú vantar bara að plögga því í bakendann

--- a/public/views/profile.pug
+++ b/public/views/profile.pug
@@ -56,13 +56,12 @@ block content
                   
                 </div>
               </div>
-              <p class="control">
+              <p class="control"><br>
                 <button class="button is-info" id="profileSubmit">Staðfesta breytingar</button>
               </p>
             </article>
         </div>
           //- if(setSemester)
-
             div#question-form
               h1.title.is-1.center-text(v-cloak) {{question.text}}
               a.button.is-large.is-primary.question-form-button(v-on:click="answerQuestion('yes')") Já
